2006-08-12  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/FamilyGroup.py: use family_id instead of spouse_id
	* src/gramps.py: catch logging error and ignore.

2006-08-12  Don Allingham  <don@gramps-project.org>
	* src/ReportBase/_FileEntry.py (FileEntry.select_file): force
	a present() to force dialog
	* src/Merge/_MergePerson.py: properly merge notes

2006-08-12  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: Fix new db creation; make metadata
	work with UseTXN set either way.
	(close): Close metadata after the checkpoint.
	* src/ViewManager.py (_connect_signals): Connect to the proper
	event to cleanly quit on window manager's close action.
	(quit): Allow variable number of args (to work with signals).
	(vb_clicked): Add method to restore pressed view if same button is
	repeteadely clicked.
	* src/DataViews/_MediaView.py (drag_data_received): Stop emission.

2006-08-12  Don Allingham  <don@gramps-project.org>
	* src/ScratchPad.py: fix removal of invalid objects (bug #291)
	* src/PageView.py: fix search argument when filter applied (but #317)

2006-08-11  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/DetDescendantReport.py: fix spouse name printing
	* src/plugins/DetAncestralReport.py: fix spouse name printing

2006-08-11  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels/_PeopleModel.py: fix sorting of names

2006-08-11  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: Use txn-capable metadata.
	* src/Editors/_EditFamily.py: Use cPickle.
	* NEWS: Update.

2006-08-10  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_EmbeddedList.py: use cPickle instead of pickle
	* src/DisplayTabs/_GalleryTab.py: add dnd functionality
	* src/DdTargets.py: add URI_LIST and APP_ROOT
	* src/DataViews/_MediaView.py: slightly improve dnd
	* src/DisplayModels/_BaseModel.py: handle sort column map
	* src/DisplayModels/_MediaModel.py: handle sort column map