@@ -4,15 +4,15 @@ dnl Process this file with autoconf to produce a configure script.
 dnl May need to run automake && aclocal first
 
 AC_PREREQ(2.57)
-AC_INIT(gramps, 2.1.95, [gramps-bugs@lists.sourceforge.net])
+AC_INIT(gramps, 2.1.91, [gramps-bugs@lists.sourceforge.net])
 AC_CONFIG_SRCDIR(configure.in)
 AM_INIT_AUTOMAKE(1.6.3)
 
 AC_CONFIG_MACRO_DIR([m4])
 GNOME_DOC_INIT
 
-RELEASE=0.SVN$(svnversion -n .)
-dnl RELEASE=1
+dnl RELEASE=0.SVN$(svnversion -n .)
+RELEASE=1
 
 VERSIONSTRING=$VERSION
 if test x"$RELEASE" != "x"
