@@ -1,3 +1,9 @@
+2006-08-13  Don Allingham  <don@gramps-project.org>
+	* src/DataViews/_MediaView.py: fix drag-n-drop
+	* src/DisplayTabs/_GalleryTab.py: handle media obj and media ref 
+	for drag-n-drop
+	* src/DdTargets.py: add media ref type
+
 2006-08-12  Brian Matherly  <brian@gramps-project.org>
 	* src/plugins/FamilyGroup.py: use family_id instead of spouse_id
 	* src/gramps.py: catch logging error and ignore.
